syntax = "proto3";
//import 'empty.proto'; //utilizar los formatos predefinidos.

package formulariorn;


//Los mensajes en el dise√±o del API.
message FormularioRequest{
  string usuario=1;
}

message FormularioResponse{
  string nombre=1;
  string sector=2;
  string nivel=3;
  string fecha=4;
  string latitude=5;
  string longitude=6;
  string accuracy=7;
  string usuario=8;
  string mimetype=9;
  string base64=10;
}

message ListaFormulario{
  repeated FormularioResponse formulario=1;
}

//Mensaje vacio.
message Empty{

}

service FormularioRn{
  rpc listaFormularioxUser(FormularioRequest) returns (ListaFormulario);
  rpc crearFormulario(FormularioResponse) returns (FormularioResponse);
  rpc listaFormulario(Empty) returns (ListaFormulario); //utilizando los formatos predefinidos.
}